[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "observability-library"
version = "0.1.0"
description = "Logging handler for Loki and Grafana"
authors = [
    {name = "Andres Quintero", email = "aquintero@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "requests>=2.28.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.14.0",
]

[project.urls]
Repository = "https://github.com/aquintero/observability-library"

[tool.setuptools.packages.find]
where = ["."]
include = ["observability_library*"]
exclude = ["tests*"]
