[project]
name = "observability-library"
version = "0.1.0"
description = "Logging handler for Loki and Grafana"
authors = [
    {name = "Andres Quintero", email = "aquintero@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "pydantic==2.4.2",
    "requests>=2.28.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.urls]
Repository = "https://github.com/aquintero/observability-library"

[tool.setuptools.packages.find]
where = ["."]
include = ["observability_library*"]
exclude = ["tests*"]
